@@ -128,6 +128,8 @@ S3method(posterior_linpred,brmsfit)
 S3method(posterior_predict,brmsfit)
 S3method(posterior_samples,brmsfit)
 S3method(posterior_samples,default)
+S3method(posterior_summary,brmsfit)
+S3method(posterior_summary,default)
 S3method(pp_check,brmsfit)
 S3method(pp_mixture,brmsfit)
 S3method(predict,brmsfit)
@@ -315,6 +317,8 @@ export(posterior_interval)
 export(posterior_linpred)
 export(posterior_predict)
 export(posterior_samples)
+export(posterior_summary)
+export(posterior_table)
 export(pp_check)
 export(pp_mixture)
 export(predictive_error)
